Tests/RunCMake/CMakePresets/InvalidVariables-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidVariables:
Error: @8,25: Invalid preset
      "cacheVariables": \[\]
                        \^$
